--- a/front/style.sass
+++ b/front/style.sass
@@ -1,23 +1,28 @@
 body
   font-family: 'Courier New'
+  display: flex
+  flex-direction: column
+  align-items: center
 
 h1,
 #view,
 #input
   max-width: 1080px
   width: 100vw
-  margin: 1rem auto
 
 h1
   font-size: 2rem
   font-weight: bold
-  margin: 1rem auto
+  margin: 2rem 1rem 0
+  text-align: center
 
 h2
   font-size: 1.5rem
   font-weight: bold
+  margin: 2rem 1rem 0
 
 #view
   canvas
+    margin-top: 1rem
     width: 100%
-    height: 10px
+    height: 20px
