--- a/front/index.pug
+++ b/front/index.pug
@@ -5,8 +5,9 @@ meta(name="viewport" content="width=device-width,initial-scale=1")
 
 h1 One Dimension Media -MOVIE-
 #view
-  h2 view
+  h2 view (DOWN to UP)
   canvas#odmm
+  canvas#analyze
 //- #input
 //-   h2 input
 
