--- a/front/style.sass
+++ b/front/style.sass
@@ -19,10 +19,14 @@ h1
 h2
   font-size: 1.5rem
   font-weight: bold
-  margin: 2rem 1rem 0
+  margin: 1rem 1rem 0
 
 #view
-  canvas
+  width: 100%
+  height: 100%
+  canvas#odmm
     margin-top: 1rem
-    width: 100%
-    height: 20px
+    // margin-top: 1rem
+  canvas#analyze
+    margin-top: 80vw
+    // display: none
