--- a/front/index.pug
+++ b/front/index.pug
@@ -2,6 +2,7 @@ doctype html
 
 title ODM Movie
 meta(name="viewport" content="width=device-width,initial-scale=1")
+meta(name='robots' content='noindex')
 
 h1 One Dimension Media -MOVIE-
 #view
